--- a/package.json
+++ b/package.json
@@ -2,5 +2,7 @@
   "name": "typescript",
   "version": "0.0.0",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "react": "^18.2.0"
+  }
 }
